RESOLVED FIXED20497
Cannot run accessibility layout tests on Windows
https://bugs.webkit.org/show_bug.cgi?id=20497
Summary Cannot run accessibility layout tests on Windows
Jon Honeycutt
Reported 2008-08-24 05:38:30 PDT
AccessibilityController is not yet implemented on Windows.
Attachments
Initial pass (22.35 KB, patch)
2008-08-24 05:43 PDT, Jon Honeycutt
no flags
Make AccessibilityController::focusedElement work (1.78 KB, patch)
2008-08-24 05:46 PDT, Jon Honeycutt
no flags
Jon Honeycutt
Comment 1 2008-08-24 05:43:11 PDT
Created attachment 22962 [details] Initial pass Initial pass.
Jon Honeycutt
Comment 2 2008-08-24 05:46:31 PDT
Created attachment 22963 [details] Make AccessibilityController::focusedElement work Calling get_accFocus on the root accessible object won't return the focused object, because AccessibleBase::get_accFocus erroneously checks whether the focused object is a child of the object.
Jon Honeycutt
Comment 3 2008-08-24 05:59:24 PDT
Committed in r35903, r35904.
Mark Rowe (bdash)
Comment 4 2008-09-03 16:56:38 PDT
Comment on attachment 22962 [details] Initial pass Clearing due to this having been landed.
Mark Rowe (bdash)
Comment 5 2008-09-03 16:56:50 PDT
Comment on attachment 22963 [details] Make AccessibilityController::focusedElement work Clearing as this has been landed.
Jon Honeycutt
Comment 6 2012-04-09 14:27:33 PDT
These tests have run on Windows for some time.
Note You need to log in before you can comment on or make changes to this bug.