WebKitTools/DumpRenderTree/AccessibilityController.h
@@ -37,7 +37,7 @@ public:
 
     void makeWindowObject(JSContextRef context, JSObjectRef windowObject, JSValueRef* exception);
 
-    // Controller Methods - platfrom independant implementations
+    // Controller Methods - platform-independent implementations
     AccessibilityUIElement rootElement();
     AccessibilityUIElement focusedElement();
 
